index-footer-and-BugSmoosh-dynamics
-Made slight changes to the index page to have it fit the viewport better, still a WIP (I'm trying to eliminate scrollbars on any screen size)

-Put the bug smoosh functionality within the Bug class itself as a method.
-Included a type variable in the bug constructors for identification
-Use the bug type to determine which smoosh to draw
-There are now 2 types of smooshes, and it will be simpler to add more if we include new bugs. Right now there is just a color difference, but I plan to update this later.

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ main#homepage{
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding: 12px;
+    /* padding: 12px; */
     margin-left: 16px;
 }
 
@@ -102,6 +102,7 @@ main#homepage{
     display: flex;
     align-self: center;
     justify-content: center;
+    max-height: max-content;
     /* padding-top: 10px; */
 }
 
@@ -111,11 +112,12 @@ main#homepage{
 
 .button-container{
     display: flex;
+    align-content: flex-end;
     justify-content: center;
     /* gap: 20px;
     padding-top: 50px; */
     max-width: 100%;
-    height: max-content;
+    max-height: max-content;
 }
 /* Button Id's for any customized styling */
 /* Only white font right now */
@@ -167,7 +169,8 @@ button:hover{
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    flex-grow: 1;
+    margin-bottom: 0%;
+    /* flex-grow: 0; */
     /* margin-bottom: auto;
     margin-top: auto; */
     background: url('./images/plaid.jpg');
@@ -175,8 +178,7 @@ button:hover{
     background-size: contain;
     /* height: max-content; */
     width: 100%;
-    /* height: 70px; */
-    padding-top: 20%;
+    padding-top: 160px;
 }
 
 /* IN-game pause button override and styling */
@@ -341,7 +343,7 @@ input{
     align-self: center;
 }
 
-
+/*Class for fading an element in and out */
 .animate-fading {
     /* For pause screen animation */
     -webkit-animation: fading 4s infinite  alternate;
